# Practic

./: CMakeLists.txt  CmakeLists.txt
src/: gensin.cpp  main.cpp
